<resources>
    <string name="app_name">Control de Ingreso</string>
    <string name="title_activity_visitantes">Visitantes</string>

    <!-- TODO: Url fotos de visitantes -->
    <string name="url_foto_visitantes">http://190.129.90.115:8083/ingresoVisitantes/visitante/mostrarFoto?foto=</string>

    <!-- TODO: Url fotos de usuarios -->
    <string name="url_foto_usuarios">http://190.129.90.115:8083/ingresoVisitantes/usuarios/mostrarFoto?foto=</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="loading">Espera un momento por favor...</string>
    <string name="no_data_available">No hay datos disponibles</string>
    <string name="creditos">Elaborado por departamento de sistemas ALBO S.A.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nombre_usuario_l">Nombre de usuario</string>
    <string name="password_l">Contraseña</string>

    <string name="texto">Texto</string>
    <string name="nombre_usuario">Nombre de usuario *</string>
    <string name="password">Contraseña</string>
    <string name="btn_ingreso">Ingresar</string>
    <string name="direccion">Dirección *</string>
    <string name="telefono">Teléfono *</string>
    <string name="ocupacion">Ocupación *</string>
    <string name="nombre_completo">Nombre completo *</string>
    <string name="email">Email *</string>
    <string name="rol">Rol</string>

    <string name="ci">Cédula de identidad *</string>
    <string name="nombres">Nombres *</string>
    <string name="apellidos">Apellidos *</string>
    <string name="telcel">Teléfono/Celular *</string>
    <string name="correo">Correo electrónico *</string>
    <string name="empresa">Empresa *</string>
    <string name="tipo_vis">Tipo de visitante *</string>
    <string name="campo_requerido">* indica campo requerido</string>

    <string name="horario_tipo_vis">Tipo de visitante</string>
    <string name="horario_nombre">Nombre</string>
    <string name="horario_descripcion">Descripción</string>
    <string name="horario_dias">Días</string>
    <string name="horario_ingreso">Ingreso</string>
    <string name="horario_salida">Salida</string>

    <string name="dv_doi">Ver documentos de ingreso</string>
    <string name="motivo">Motivo</string>
    <string name="observacion">Observación</string>
    <string name="salida">Salida</string>
    <string name="dv_ingreso">Ingreso</string>
    <string name="dv_visita">Visita</string>
    <string name="dv_tipo_vis">Tipo de visitante</string>
    <string name="dv_empresa">Empresa</string>
    <string name="dv_telcel">Teléfono/Celular</string>
    <string name="dv_apellidos">Apellidos</string>
    <string name="dv_nombres">Nombres</string>

    <string name="dvis">Visitante</string>
    <string name="dvis_nombre">Nombre</string>
    <string name="dvis_paterno">Apellido Paterno</string>

    <string name="mtrl_picker_save" description="Confirms the selection [CHAR_LIMIT=12]">Hola</string>
    <string name="mtrl_picker_text_input_date_range_start_hint" description="Label for the start date in a range selected by the user [CHAR_LIMIT=60]">Fecha inicial</string>
    <string name="mtrl_picker_text_input_date_range_end_hint" description="Label for the end date in a range selected by the user [CHAR_LIMIT=60]">Fecha final</string>
    <string name="mtrl_picker_range_header_only_start_selected" description="Placeholders for two dates separated by a dash representing a range where start date has been selected [CHAR_LIMIT=60]">%1$s – Fecha final</string>
    <string name="mtrl_picker_range_header_only_end_selected" description="Placeholders for two dates separated by a dash representing a range where end date has been selected [CHAR_LIMIT=60]">Fecha inicial – %1$s</string>
    <string name="mtrl_picker_range_header_unselected" description="Placeholders for two dates separated by a dash representing a range [CHAR_LIMIT=60]">Fecha inicial – Fecha final</string>



</resources>
